--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <script>
         /* URL DEL WEBHOOK */
-        const N8N_WEBHOOK_URL = "http://localhost:5678/webhook/711e538b-9d63-42bb-8494-873301ffdf39";
+        const N8N_WEBHOOK_URL = "https://podzolic-dorethea-rancorously.ngrok-free.dev/webhook/711e538b-9d63-42bb-8494-873301ffdf39";
 
         const canvas = document.getElementById("miCanvas");
         const ctx = canvas.getContext("2d");
@@ -178,3 +178,4 @@
 </body>
 
 </html>
+
