--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foto a PDF</title>
-
+    <title>De ejercicio a Ficha PDF</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
@@ -28,7 +28,7 @@
 
         <div class="bg-blue-600 p-6 text-center shadow-md z-10">
             <h1 class="text-2xl font-bold text-white">
-                <i class="fa-solid fa-file-pdf mr-2"></i>Foto a PDF
+                <i class="fa-solid fa-file-pdf mr-2"></i>Foto a Ficha PDF
             </h1>
             <p class="text-blue-100 text-sm">Sube una imagen y genera tu PDF</p>
         </div>
@@ -178,4 +178,5 @@
 </body>
 
 </html>
+
 
