--- a/ficha.html
+++ b/ficha.html
@@ -91,7 +91,7 @@
 
 <script>
 /* ===== CONFIG ===== */
-const N8N_WEBHOOK_URL = "https://TU_WEBHOOK_AQUI";
+const N8N_WEBHOOK_URL = "https://podzolic-dorethea-rancorously.ngrok-free.dev/webhook/711e538b-9d63-42bb-8494-873301ffdf39;
 
 /* ===== ELEMENTOS ===== */
 const canvas = document.getElementById("miCanvas");
@@ -226,4 +226,5 @@ function descargar(blob, nombre){
 
 </body>
 </html>
+
 
