--- a/menú.html
+++ b/menú.html
@@ -30,24 +30,28 @@ button.menu-btn:hover {
 <!-- MENÚ PRINCIPAL -->
 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 w-full max-w-4xl px-6">
 
-    <button onclick="window.location.href='crear-ficha.html'" 
+    <!-- Crear Ficha -->
+    <button onclick="window.location.href='index.html'" 
         class="menu-btn bg-blue-600 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-blue-700">
         <i class="fa-solid fa-file-pdf text-4xl mb-3"></i>
         <span class="text-xl font-semibold">Crear Ficha</span>
     </button>
 
-    <button onclick="window.location.href='ficha-custom.html'" 
+    <!-- Ficha Customizada -->
+    <button onclick="window.location.href='ficha.html'" 
         class="menu-btn bg-green-600 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-green-700">
         <i class="fa-solid fa-sliders text-4xl mb-3"></i>
         <span class="text-xl font-semibold">Ficha Customizada</span>
     </button>
 
+    <!-- Solucionario -->
     <button onclick="window.location.href='solucionario.html'" 
         class="menu-btn bg-yellow-500 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-yellow-600">
         <i class="fa-solid fa-book-open text-4xl mb-3"></i>
         <span class="text-xl font-semibold">Solucionario</span>
     </button>
 
+    <!-- Modo Examen -->
     <button onclick="window.location.href='modo-examen.html'" 
         class="menu-btn bg-red-600 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-red-700">
         <i class="fa-solid fa-clock text-4xl mb-3"></i>
