--- a/index.html
+++ b/index.html
@@ -1,235 +1,174 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De ejercicio a Ficha PDF</title>
-    <link rel="icon" type="image/png" href="logo.png">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-
-    <style>
-        canvas { box-shadow: 0 4px 6px rgba(0,0,0,.1); max-width: 100%; height: auto; }
-        .loader {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #3b82f6;
-            border-radius: 50%;
-            width: 24px;
-            height: 24px;
-            animation: spin 1s linear infinite;
-        }
-        @keyframes spin { 100% { transform: rotate(360deg); } }
-        /* Modal fondo */
-        .modal-bg {
-            background-color: rgba(0,0,0,0.4);
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>De ejercicio a Ficha PDF</title>
+<link rel="icon" type="image/png" href="logo.png">
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+<style>
+canvas {
+    box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+    max-width: 100%;
+    height: auto;
+    border-radius: 0.5rem;
+    transition: transform 0.3s;
+}
+canvas:hover {
+    transform: scale(1.02);
+}
+.loader {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3b82f6;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    animation: spin 1s linear infinite;
+}
+@keyframes spin { 100% { transform: rotate(360deg); } }
+</style>
 </head>
-
-<body class="bg-white h-screen w-screen overflow-x-hidden">
+<body class="bg-gray-50 h-screen w-screen overflow-x-hidden font-sans">
 
 <div class="w-full h-full flex flex-col">
 
     <!-- BARRA SUPERIOR -->
-    <div class="bg-blue-600 p-6 text-center shadow-md z-10 flex justify-between items-center">
+    <div class="bg-gradient-to-r from-blue-600 to-blue-500 p-6 text-center shadow-lg flex justify-between items-center">
         <div>
-            <h1 class="text-2xl font-bold text-white inline-block">
+            <h1 class="text-2xl font-extrabold text-white inline-flex items-center">
                 <i class="fa-solid fa-file-pdf mr-2"></i>Foto a Ficha PDF
             </h1>
-            <p class="text-blue-100 text-sm inline-block ml-4">Sube una imagen y genera tu PDF</p>
+            <p class="text-blue-100 text-sm ml-2 inline">Sube una imagen y genera tu PDF</p>
         </div>
-        <button onclick="abrirCustom()"
-            class="bg-white text-blue-600 font-bold py-2 px-4 rounded hover:bg-gray-100 transition">
-            Modo Customizado
-        </button>
     </div>
 
     <div class="flex-1 flex flex-col justify-center items-center p-6 w-full max-w-2xl mx-auto">
 
-        <div class="w-full">
-            <label class="block text-sm font-bold mb-2 text-gray-700 text-center">1. Selecciona una imagen</label>
+        <div class="w-full space-y-4">
+
+            <label class="block text-sm font-semibold mb-2 text-gray-700 text-center">Selecciona una imagen</label>
             
-            <div onclick="photoInput.click()" class="border-4 border-dashed border-gray-200 rounded-xl p-8 text-center cursor-pointer hover:bg-gray-50 transition-colors">
+            <div onclick="photoInput.click()"
+                 class="border-4 border-dashed border-gray-300 rounded-2xl p-10 text-center cursor-pointer hover:bg-gray-100 transition-all duration-300">
                 <input type="file" id="photoInput" accept="image/*" class="hidden">
-                <div class="text-6xl text-gray-300 mb-2">
+                <div class="text-7xl text-gray-300 mb-3">
                     <i class="fa-solid fa-camera"></i>
                 </div>
                 <p id="fileName" class="text-gray-500 font-medium">Toca para subir o tomar foto</p>
             </div>
 
-            <div id="canvasContainer" class="hidden mt-6 text-center bg-gray-100 p-2 rounded-lg">
-                <canvas id="miCanvas" class="mx-auto rounded border bg-white"></canvas>
+            <div id="canvasContainer" class="hidden mt-6 text-center bg-white p-4 rounded-xl shadow-inner">
+                <canvas id="miCanvas" class="mx-auto"></canvas>
             </div>
 
-            <button id="sendBtn" disabled onclick="enviar()"
-                class="mt-6 w-full bg-gray-200 text-gray-400 py-4 rounded-xl font-bold text-lg shadow-sm cursor-not-allowed transition-all">
+            <button id="sendBtn" disabled
+                class="mt-6 w-full bg-blue-600 text-white py-4 rounded-xl font-bold text-lg shadow-md hover:bg-blue-700 transform active:scale-95 transition-all duration-200">
                 Generar PDF
             </button>
 
             <div id="status" class="hidden mt-4 text-sm text-center p-3 rounded-lg font-medium"></div>
             <div id="downloadContainer" class="hidden mt-4 text-center"></div>
+
         </div>
-    
+
     </div>
 
-    <div class="p-4 text-center text-xs text-gray-400 bg-gray-50">
+    <div class="p-4 text-center text-xs text-gray-400 bg-gray-100">
         DLP Academy Tool
     </div>
 
 </div>
 
-<!-- MODAL CUSTOMIZADO -->
-<div id="modalCustom" class="hidden fixed inset-0 flex items-center justify-center modal-bg z-20">
-    <div class="bg-white p-6 rounded-lg shadow-lg w-96">
-        <h2 class="text-xl font-bold mb-4 text-center text-blue-600">Modo Customizado</h2>
-        <label class="block mb-2 font-medium">Curso:</label>
-        <input id="cursoCustom" type="text" placeholder="Ej: 2º ESO"
-            class="w-full p-2 mb-4 border rounded">
-
-        <label class="block mb-2 font-medium">Nivel:</label>
-        <select id="nivelCustom" class="w-full p-2 mb-4 border rounded">
-            <option value="">Selecciona nivel</option>
-            <option value="facil">Fácil</option>
-            <option value="medio">Medio</option>
-            <option value="dificil">Difícil</option>
-        </select>
-
-        <div class="flex justify-end gap-2">
-            <button onclick="cerrarCustom()" class="bg-gray-300 py-2 px-4 rounded hover:bg-gray-400">Cancelar</button>
-            <button onclick="aceptarCustom()" class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">Aceptar</button>
-        </div>
-    </div>
-</div>
-
 <script>
-    // Abrir y cerrar modal
-    function abrirCustom() {
-        document.getElementById('modalCustom').classList.remove('hidden');
-    }
-    function cerrarCustom() {
-        document.getElementById('modalCustom').classList.add('hidden');
-    }
-    function aceptarCustom() {
-        const curso = document.getElementById('cursoCustom').value;
-        const nivel = document.getElementById('nivelCustom').value;
-        if(!curso || !nivel){
-            alert("Selecciona curso y nivel");
-            return;
+const N8N_WEBHOOK_URL = "https://podzolic-dorethea-rancorously.ngrok-free.dev/webhook/711e538b-9d63-42bb-8494-873301ffdf39";
+const canvas = document.getElementById("miCanvas");
+const ctx = canvas.getContext("2d");
+const sendBtn = document.getElementById("sendBtn");
+const status = document.getElementById("status");
+const fileName = document.getElementById("fileName");
+const downloadContainer = document.getElementById("downloadContainer");
+const photoInput = document.getElementById("photoInput");
+
+photoInput.onchange = e => {
+    const file = e.target.files[0];
+    if (!file) return;
+
+    fileName.textContent = file.name;
+    const reader = new FileReader();
+    reader.onload = ev => {
+        const img = new Image();
+        img.onload = () => {
+            const max = 1024;
+            let w = img.width, h = img.height;
+            if (w > max) { h *= max / w; w = max; }
+            canvas.width = w;
+            canvas.height = h;
+            ctx.drawImage(img,0,0,w,h);
+            document.getElementById('canvasContainer').classList.remove("hidden");
+            sendBtn.disabled = false;
         }
-        // Guardamos los valores para enviar junto con la imagen
-        window.customCurso = curso;
-        window.customNivel = nivel;
-        cerrarCustom();
-        alert("Modo customizado activado: "+curso+" - "+nivel);
+        img.src = ev.target.result;
     }
+    reader.readAsDataURL(file);
+};
 
-    /* URL DEL WEBHOOK */
-    const N8N_WEBHOOK_URL = "https://podzolic-dorethea-rancorously.ngrok-free.dev/webhook/711e538b-9d63-42bb-8494-873301ffdf39";
+async function enviar() {
+    sendBtn.innerHTML = `<span class="loader inline-block mr-2 align-middle"></span> Procesando...`;
+    sendBtn.disabled = true;
+    downloadContainer.classList.add("hidden");
 
-    const canvas = document.getElementById("miCanvas");
-    const ctx = canvas.getContext("2d");
-    const sendBtn = document.getElementById("sendBtn");
-    const status = document.getElementById("status");
-    const fileName = document.getElementById("fileName");
-    const downloadContainer = document.getElementById("downloadContainer");
+    canvas.toBlob(async blob => {
+        const fd = new FormData();
+        fd.append("data", blob, "imagen.jpg");
 
-    photoInput.onchange = e => {
-        const file = e.target.files[0];
-        if (!file) return;
+        try {
+            const res = await fetch(N8N_WEBHOOK_URL,{
+                method:"POST",
+                body:fd
+            });
+            if (!res.ok) throw "n8n no respondió ("+res.status+")";
 
-        fileName.textContent = file.name;
-        const reader = new FileReader();
-
-        reader.onload = ev => {
-            const img = new Image();
-            img.onload = () => {
-                const max = 1024;
-                let w = img.width, h = img.height;
-                if (w > max) { h *= max / w; w = max; }
-                canvas.width = w;
-                canvas.height = h;
-                ctx.drawImage(img,0,0,w,h);
-                document.getElementById('canvasContainer').classList.remove("hidden");
-                activar();
-            }
-            img.src = ev.target.result;
+            const data = await res.blob();
+            descargar(data,"Documento.pdf");
+            crearBotonDescarga(data, "Documento.pdf");
+            mensaje("¡PDF listo! La descarga comenzará automáticamente.");
+        } catch(e){
+            mensaje("Error: Verifica que n8n esté activo y el túnel funcionando.", false);
+            console.error(e);
+        } finally {
+            sendBtn.innerHTML="Generar PDF";
+            sendBtn.disabled = false;
         }
-        reader.readAsDataURL(file);
-    };
+    },"image/jpeg",0.8);
+}
 
-    function activar(){
-        sendBtn.disabled = false;
-        sendBtn.className = "mt-6 w-full bg-blue-600 text-white py-4 rounded-xl font-bold text-lg shadow-lg hover:bg-blue-700 hover:shadow-xl transform active:scale-95 transition-all";
-    }
+function descargar(blob,nombre){
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download=nombre;
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+    URL.revokeObjectURL(url);
+}
 
-    function mensaje(txt, ok=true){
-        status.innerHTML = txt;
-        status.className = `mt-4 text-sm text-center p-3 rounded-lg font-medium ${
-            ok ? "bg-green-100 text-green-700" : "bg-red-100 text-red-700"
-        }`;
-        status.classList.remove("hidden");
-    }
+function crearBotonDescarga(blob, nombre) {
+    downloadContainer.innerHTML = "";
+    const btn = document.createElement("button");
+    btn.innerHTML = '<i class="fa-solid fa-download mr-2"></i> Descargar PDF nuevamente';
+    btn.className = "mt-4 w-full bg-green-600 text-white py-4 rounded-xl font-bold text-lg shadow-md hover:bg-green-700 transition-all";
+    btn.onclick = () => descargar(blob, nombre);
+    downloadContainer.appendChild(btn);
+    downloadContainer.classList.remove("hidden");
+}
 
-    async function enviar() {
-        if(!window.customCurso || !window.customNivel){
-            mensaje("Activa el modo customizado y selecciona curso y nivel", false);
-            return;
-        }
-
-        sendBtn.innerHTML = `<span class="loader inline-block mr-2 align-middle"></span> Procesando...`;
-        sendBtn.disabled = true;
-        downloadContainer.classList.add("hidden");
-
-        canvas.toBlob(async blob => {
-            const fd = new FormData();
-            fd.append("data", blob, "imagen.jpg");
-            fd.append("curso", window.customCurso);
-            fd.append("nivel", window.customNivel);
-
-            try {
-                const res = await fetch(N8N_WEBHOOK_URL,{
-                    method:"POST",
-                    body:fd
-                });
-
-                if (!res.ok) throw "n8n no respondió ("+res.status+")";
-
-                const data = await res.blob();
-                descargar(data,"Documento.pdf");
-                crearBotonDescarga(data, "Documento.pdf");
-                mensaje("¡PDF listo! La descarga comenzará automáticamente.");
-            }
-            catch(e){
-                mensaje("Error: Verifica que n8n esté activo y el túnel funcionando.", false);
-                console.error(e);
-            }
-            finally {
-                sendBtn.innerHTML="Generar PDF";
-                activar();
-            }
-        },"image/jpeg",0.8);
-    }
-
-    function descargar(blob,nombre){
-        const url = URL.createObjectURL(blob);
-        const a = document.createElement("a");
-        a.href = url;
-        a.download=nombre;
-        document.body.appendChild(a);
-        a.click();
-        a.remove();
-        URL.revokeObjectURL(url);
-    }
-
-    function crearBotonDescarga(blob, nombre) {
-        downloadContainer.innerHTML = "";
-        const btn = document.createElement("button");
-        btn.innerHTML = '<i class="fa-solid fa-download mr-2"></i> Descargar PDF nuevamente';
-        btn.className = "mt-4 w-full bg-green-600 text-white py-4 rounded-xl font-bold text-lg shadow-lg hover:bg-green-700 transition-all";
-        btn.onclick = () => descargar(blob, nombre);
-        downloadContainer.appendChild(btn);
-        downloadContainer.classList.remove("hidden");
-    }
+function mensaje(txt, ok=true){
+    status.innerHTML = txt;
+    status.className = `mt-4 text-sm text-center p-3 rounded-lg font-medium ${ok ? "bg-green-100 text-green-700" : "bg-red-100 text-red-700"}`;
+    status.classList.remove("hidden");
+}
 </script>
 
 </body>
