--- a/index.html
+++ b/index.html
@@ -3,173 +3,67 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>De ejercicio a Ficha PDF</title>
+<title>Menú Principal - DLP Academy</title>
 <link rel="icon" type="image/png" href="logo.png">
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 <style>
-canvas {
-    box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-    max-width: 100%;
-    height: auto;
-    border-radius: 0.5rem;
-    transition: transform 0.3s;
+body { font-family: 'Inter', sans-serif; }
+button.menu-btn {
+    transition: all 0.3s ease;
 }
-canvas:hover {
-    transform: scale(1.02);
+button.menu-btn:hover {
+    transform: scale(1.05);
 }
-.loader {
-    border: 4px solid #f3f3f3;
-    border-top: 4px solid #3b82f6;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    animation: spin 1s linear infinite;
-}
-@keyframes spin { 100% { transform: rotate(360deg); } }
 </style>
 </head>
-<body class="bg-gray-50 h-screen w-screen overflow-x-hidden font-sans">
+<body class="bg-gray-50 min-h-screen flex flex-col items-center justify-center">
 
-<div class="w-full h-full flex flex-col">
+<!-- CABECERA CENTRADA -->
+<header class="mb-12 text-center flex flex-col items-center">
+    <h1 class="text-4xl font-extrabold text-blue-600 mb-2">
+        <i class="fa-solid fa-graduation-cap mr-2"></i>DLP Academy
+    </h1>
+    <p class="text-gray-500 text-lg">Selecciona una opción para continuar</p>
+</header>
 
-    <!-- BARRA SUPERIOR -->
-    <div class="bg-gradient-to-r from-blue-600 to-blue-500 p-6 text-center shadow-lg flex justify-between items-center">
-        <div>
-            <h1 class="text-2xl font-extrabold text-white inline-flex items-center">
-                <i class="fa-solid fa-file-pdf mr-2"></i>Foto a Ficha PDF
-            </h1>
-            <p class="text-blue-100 text-sm ml-2 inline">Sube una imagen y genera tu PDF</p>
-        </div>
-    </div>
+<!-- MENÚ PRINCIPAL -->
+<div class="grid grid-cols-1 md:grid-cols-2 gap-6 w-full max-w-4xl px-6">
 
-    <div class="flex-1 flex flex-col justify-center items-center p-6 w-full max-w-2xl mx-auto">
+    <!-- Crear Ficha -->
+    <button onclick="window.location.href='ficha_defecto.html'" 
+        class="menu-btn bg-blue-600 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-blue-700">
+        <i class="fa-solid fa-file-pdf text-4xl mb-3"></i>
+        <span class="text-xl font-semibold">Crear Ficha</span>
+    </button>
 
-        <div class="w-full space-y-4">
+    <!-- Ficha Customizada -->
+    <button onclick="window.location.href='ficha.html'" 
+        class="menu-btn bg-green-600 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-green-700">
+        <i class="fa-solid fa-sliders text-4xl mb-3"></i>
+        <span class="text-xl font-semibold">Ficha Customizada</span>
+    </button>
 
-            <label class="block text-sm font-semibold mb-2 text-gray-700 text-center">Selecciona una imagen</label>
-            
-            <div onclick="photoInput.click()"
-                 class="border-4 border-dashed border-gray-300 rounded-2xl p-10 text-center cursor-pointer hover:bg-gray-100 transition-all duration-300">
-                <input type="file" id="photoInput" accept="image/*" class="hidden">
-                <div class="text-7xl text-gray-300 mb-3">
-                    <i class="fa-solid fa-camera"></i>
-                </div>
-                <p id="fileName" class="text-gray-500 font-medium">Toca para subir o tomar foto</p>
-            </div>
+    <!-- Solucionario -->
+    <button onclick="window.location.href='solucionario.html'" 
+        class="menu-btn bg-yellow-500 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-yellow-600">
+        <i class="fa-solid fa-book-open text-4xl mb-3"></i>
+        <span class="text-xl font-semibold">Solucionario</span>
+    </button>
 
-            <div id="canvasContainer" class="hidden mt-6 text-center bg-white p-4 rounded-xl shadow-inner">
-                <canvas id="miCanvas" class="mx-auto"></canvas>
-            </div>
-
-            <button id="sendBtn" disabled
-                class="mt-6 w-full bg-blue-600 text-white py-4 rounded-xl font-bold text-lg shadow-md hover:bg-blue-700 transform active:scale-95 transition-all duration-200">
-                Generar PDF
-            </button>
-
-            <div id="status" class="hidden mt-4 text-sm text-center p-3 rounded-lg font-medium"></div>
-            <div id="downloadContainer" class="hidden mt-4 text-center"></div>
-
-        </div>
-
-    </div>
-
-    <div class="p-4 text-center text-xs text-gray-400 bg-gray-100">
-        DLP Academy Tool
-    </div>
+    <!-- Modo Examen -->
+    <button onclick="window.location.href='modo-examen.html'" 
+        class="menu-btn bg-red-600 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-red-700">
+        <i class="fa-solid fa-clock text-4xl mb-3"></i>
+        <span class="text-xl font-semibold">Modo Examen</span>
+    </button>
 
 </div>
 
-<script>
-const N8N_WEBHOOK_URL = "https://podzolic-dorethea-rancorously.ngrok-free.dev/webhook/711e538b-9d63-42bb-8494-873301ffdf39";
-const canvas = document.getElementById("miCanvas");
-const ctx = canvas.getContext("2d");
-const sendBtn = document.getElementById("sendBtn");
-const status = document.getElementById("status");
-const fileName = document.getElementById("fileName");
-const downloadContainer = document.getElementById("downloadContainer");
-const photoInput = document.getElementById("photoInput");
-
-photoInput.onchange = e => {
-    const file = e.target.files[0];
-    if (!file) return;
-
-    fileName.textContent = file.name;
-    const reader = new FileReader();
-    reader.onload = ev => {
-        const img = new Image();
-        img.onload = () => {
-            const max = 1024;
-            let w = img.width, h = img.height;
-            if (w > max) { h *= max / w; w = max; }
-            canvas.width = w;
-            canvas.height = h;
-            ctx.drawImage(img,0,0,w,h);
-            document.getElementById('canvasContainer').classList.remove("hidden");
-            sendBtn.disabled = false;
-        }
-        img.src = ev.target.result;
-    }
-    reader.readAsDataURL(file);
-};
-
-async function enviar() {
-    sendBtn.innerHTML = `<span class="loader inline-block mr-2 align-middle"></span> Procesando...`;
-    sendBtn.disabled = true;
-    downloadContainer.classList.add("hidden");
-
-    canvas.toBlob(async blob => {
-        const fd = new FormData();
-        fd.append("data", blob, "imagen.jpg");
-
-        try {
-            const res = await fetch(N8N_WEBHOOK_URL,{
-                method:"POST",
-                body:fd
-            });
-            if (!res.ok) throw "n8n no respondió ("+res.status+")";
-
-            const data = await res.blob();
-            descargar(data,"Documento.pdf");
-            crearBotonDescarga(data, "Documento.pdf");
-            mensaje("¡PDF listo! La descarga comenzará automáticamente.");
-        } catch(e){
-            mensaje("Error: Verifica que n8n esté activo y el túnel funcionando.", false);
-            console.error(e);
-        } finally {
-            sendBtn.innerHTML="Generar PDF";
-            sendBtn.disabled = false;
-        }
-    },"image/jpeg",0.8);
-}
-
-function descargar(blob,nombre){
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement("a");
-    a.href = url;
-    a.download=nombre;
-    document.body.appendChild(a);
-    a.click();
-    a.remove();
-    URL.revokeObjectURL(url);
-}
-
-function crearBotonDescarga(blob, nombre) {
-    downloadContainer.innerHTML = "";
-    const btn = document.createElement("button");
-    btn.innerHTML = '<i class="fa-solid fa-download mr-2"></i> Descargar PDF nuevamente';
-    btn.className = "mt-4 w-full bg-green-600 text-white py-4 rounded-xl font-bold text-lg shadow-md hover:bg-green-700 transition-all";
-    btn.onclick = () => descargar(blob, nombre);
-    downloadContainer.appendChild(btn);
-    downloadContainer.classList.remove("hidden");
-}
-
-function mensaje(txt, ok=true){
-    status.innerHTML = txt;
-    status.className = `mt-4 text-sm text-center p-3 rounded-lg font-medium ${ok ? "bg-green-100 text-green-700" : "bg-red-100 text-red-700"}`;
-    status.classList.remove("hidden");
-}
-</script>
+<!-- PIE DE PÁGINA -->
+<footer class="mt-12 text-center text-gray-400 text-xs">
+    &copy; 2025 DLP Academy Tool
+</footer>
 
 </body>
 </html>
