--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ button.menu-btn:hover {
     </button>
 
     <!-- Solucionario -->
-    <button onclick="window.location.href='solucionario.html'" 
+    <button onclick="window.location.href='SOLUCIONARIO.html'" 
         class="menu-btn bg-yellow-500 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-yellow-600">
         <i class="fa-solid fa-book-open text-4xl mb-3"></i>
         <span class="text-xl font-semibold">Solucionario</span>
@@ -67,3 +67,4 @@ button.menu-btn:hover {
 
 </body>
 </html>
+
