--- a/SOLUCIONARIO.html
+++ b/SOLUCIONARIO.html
@@ -21,38 +21,35 @@
   </style>
 </head>
 
-<body class="bg-white min-h-screen">
+<body class="bg-gray-50 min-h-screen">
 
-<header class="bg-purple-600 p-6 text-center shadow-md">
-  <h1 class="text-2xl font-bold text-white">
+<header class="bg-yellow-400 p-6 text-center shadow-md">
+  <h1 class="text-2xl font-bold text-gray-900">
     <i class="fa-solid fa-book-open mr-2"></i>Solucionario automático
   </h1>
-  <p class="text-purple-100 text-sm">
+  <p class="text-yellow-900 text-sm font-medium">
     Sube una ficha y recibe el solucionario completo
   </p>
 </header>
 
 <main class="max-w-2xl mx-auto p-6">
 
-  <!-- SUBIDA DE ARCHIVO -->
   <div onclick="archivo.click()"
-    class="border-4 border-dashed border-gray-300 rounded-xl p-8 text-center cursor-pointer hover:bg-gray-50 transition">
+    class="border-4 border-dashed border-gray-300 rounded-xl p-8 text-center cursor-pointer hover:bg-yellow-50 hover:border-yellow-400 transition duration-300 group">
     <input type="file" id="archivo" accept="image/*,application/pdf" class="hidden">
-    <div class="text-5xl text-gray-300 mb-2">
+    <div class="text-5xl text-gray-300 mb-2 group-hover:text-yellow-500 transition">
       <i class="fa-solid fa-file-arrow-up"></i>
     </div>
-    <p id="nombreArchivo" class="text-gray-500 font-medium">
+    <p id="nombreArchivo" class="text-gray-500 font-medium group-hover:text-yellow-700">
       Sube foto(s) o PDF de los ejercicios
     </p>
   </div>
 
-  <!-- BOTÓN -->
   <button id="sendBtn" disabled onclick="enviar()"
-    class="mt-6 w-full bg-purple-600 text-white py-4 rounded-xl font-bold text-lg cursor-not-allowed">
+    class="mt-6 w-full bg-yellow-400 hover:bg-yellow-500 text-gray-900 py-4 rounded-xl font-bold text-lg cursor-not-allowed transition shadow-sm">
     Generar solucionario PDF
   </button>
 
-  <!-- ESTADO -->
   <div id="status" class="hidden mt-4 text-sm text-center p-3 rounded-lg font-medium"></div>
 
 </main>
@@ -75,15 +72,15 @@ archivo.onchange = e => {
 
 function activar(){
   sendBtn.disabled = false;
-  sendBtn.classList.remove("cursor-not-allowed");
+  sendBtn.classList.remove("cursor-not-allowed", "opacity-50"); // Añadido control de opacidad si se desea
 }
 
 function mensaje(txt, ok=true){
   status.textContent = txt;
   status.className =
     `mt-4 text-sm text-center p-3 rounded-lg font-medium ${
-      ok ? "bg-green-100 text-green-700"
-         : "bg-red-100 text-red-700"
+      ok ? "bg-green-100 text-green-800 border border-green-200"
+         : "bg-red-100 text-red-800 border border-red-200"
     }`;
   status.classList.remove("hidden");
 }
@@ -95,8 +92,9 @@ async function enviar(){
     return;
   }
 
+  // Mantenemos el loader visualmente coherente
   sendBtn.innerHTML =
-    `<span class="loader inline-block mr-2"></span> Analizando ejercicios...`;
+    `<span class="loader inline-block mr-2 align-middle"></span> Analizando ejercicios...`;
   sendBtn.disabled = true;
 
   const fd = new FormData();
@@ -142,4 +140,3 @@ function descargar(blob, nombre){
 
 </body>
 </html>
-
