--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ button.menu-btn:hover {
         <span class="text-xl font-semibold">Solucionario</span>
     </button>
 
-    <button onclick="window.location.href='modo-examen.html'" 
+    <button onclick="window.location.href='examen.html'" 
         class="menu-btn bg-red-600 text-white py-6 rounded-xl shadow-lg flex flex-col items-center justify-center hover:bg-red-700">
         <i class="fa-solid fa-clock text-4xl mb-3"></i>
         <span class="text-xl font-semibold">Modo Examen</span>
@@ -68,3 +68,4 @@ button.menu-btn:hover {
 
 </body>
 </html>
+
