--- a/ficha.html
+++ b/ficha.html
@@ -12,7 +12,7 @@
 <body class="bg-gray-50 min-h-screen flex flex-col transition-colors duration-[3000ms] ease-in-out">
 
 <header id="header" class="bg-blue-600 p-6 text-center shadow-md transition-colors duration-[3000ms]">
-  <h1 class="text-3xl font-bold text-white">
+  <h1 class="text-3xl font-bold text-white flex items-center justify-center">
     <i class="fa-solid fa-graduation-cap mr-2"></i>Ficha de ejercicios
   </h1>
   <p id="subtitulo" class="text-blue-100 mt-1">Selecciona curso y dificultad</p>
@@ -20,6 +20,7 @@
 
 <main class="w-full max-w-6xl mx-auto p-8 flex-grow">
 
+  <!-- FORMULARIO -->
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
     <div>
       <label class="block font-bold mb-2 text-gray-700">Curso</label>
@@ -41,7 +42,7 @@
   <div id="dropZone"
     class="group text-blue-500 w-full min-h-[50vh] flex flex-col justify-center items-center
            border-4 border-dashed border-gray-300 rounded-2xl p-6 cursor-pointer
-           bg-white transition-all duration-500 shadow-sm">
+           bg-white transition-all duration-500 shadow-sm hover:bg-gray-100">
 
     <div class="text-7xl mb-6 transition-transform duration-300 group-hover:scale-110">
       <i class="fa-solid fa-camera"></i>
@@ -50,6 +51,17 @@
     <p id="fileName" class="text-2xl font-medium text-center px-4">
       Toca para subir una imagen de los ejercicios
     </p>
+
+    <!-- input escondido -->
+    <input type="file" id="fileInput" accept="image/*" multiple hidden>
+  </div>
+
+  <!-- BOTÓN DE ENVÍO -->
+  <div class="text-center mt-8">
+    <button onclick="enviarAN8N()"
+      class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg transition-colors duration-300">
+      Generar PDF
+    </button>
   </div>
 
 </main>
@@ -58,6 +70,10 @@
 const header = document.getElementById("header");
 const subtitulo = document.getElementById("subtitulo");
 const dropZone = document.getElementById("dropZone");
+const fileInput = document.getElementById("fileInput");
+const fileName = document.getElementById("fileName");
+
+let archivos = [];
 
 const temas = {
   defecto: {
@@ -82,6 +98,7 @@ const temas = {
   }
 };
 
+// Cambiar tema según nivel
 function cambiarNivel() {
   const nivel = document.getElementById("nivel").value;
   const tema = temas[nivel] || temas.defecto;
@@ -95,6 +112,50 @@ function cambiarNivel() {
     bg-white transition-all duration-500 shadow-sm
     ${tema.drop}
   `;
+}
+
+// Abrir selector de archivos al tocar dropZone
+dropZone.addEventListener("click", () => fileInput.click());
+
+// Guardar archivos y mostrar cantidad
+fileInput.addEventListener("change", () => {
+  archivos = [...fileInput.files];
+  fileName.textContent = archivos.length
+    ? `${archivos.length} imagen(es) seleccionada(s)`
+    : "Toca para subir una imagen de los ejercicios";
+});
+
+// Función de envío a n8n (lista para webhook)
+function enviarAN8N() {
+  const curso = document.getElementById("curso").value;
+  const nivel = document.getElementById("nivel").value;
+
+  if (!curso || !nivel || archivos.length === 0) {
+    alert("Completa todos los campos y sube al menos una imagen.");
+    return;
+  }
+
+  const formData = new FormData();
+  formData.append("curso", curso);
+  formData.append("nivel", nivel);
+
+  archivos.forEach((file, i) => {
+    formData.append(`imagen_${i}`, file);
+  });
+
+  fetch("https://podzolic-dorethea-rancorously.ngrok-free.dev/webhook-test/711e538b-9d63-42bb-8494-873301ffdf39", {
+    method: "POST",
+    body: formData
+  })
+  .then(res => res.blob())
+  .then(blob => {
+    const url = window.URL.createObjectURL(blob);
+    window.open(url);
+  })
+  .catch(err => {
+    console.error(err);
+    alert("Error al generar el PDF");
+  });
 }
 </script>
 
