--- a/ficha.html
+++ b/ficha.html
@@ -9,9 +9,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-50 min-h-screen flex flex-col transition-colors duration-[3000ms] ease-in-out">
+<body class="bg-gray-50 min-h-screen flex flex-col transition-colors duration-[100ms] ease-in-out">
 
-<header id="header" class="bg-blue-600 p-6 text-center shadow-md transition-colors duration-[3000ms]">
+<header id="header" class="bg-blue-600 p-6 text-center shadow-md transition-colors duration-[100ms]">
   <h1 class="text-3xl font-bold text-white flex items-center justify-center">
     <i class="fa-solid fa-graduation-cap mr-2"></i>Ficha de ejercicios
   </h1>
@@ -42,7 +42,7 @@
   <div id="dropZone"
     class="group text-blue-500 w-full min-h-[50vh] flex flex-col justify-center items-center
            border-4 border-dashed border-gray-300 rounded-2xl p-6 cursor-pointer
-           bg-white transition-all duration-500 shadow-sm hover:bg-gray-100">
+           bg-white transition-all duration-300 shadow-sm hover:bg-gray-100">
 
     <div class="text-7xl mb-6 transition-transform duration-300 group-hover:scale-110">
       <i class="fa-solid fa-camera"></i>
@@ -58,7 +58,7 @@
 
   <!-- BOTÓN DE ENVÍO -->
   <div class="text-center mt-8">
-    <button onclick="enviarAN8N()"
+    <button id="btnGenerar" onclick="enviarAN8N()"
       class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg transition-colors duration-300">
       Generar PDF
     </button>
@@ -72,6 +72,7 @@ const subtitulo = document.getElementById("subtitulo");
 const dropZone = document.getElementById("dropZone");
 const fileInput = document.getElementById("fileInput");
 const fileName = document.getElementById("fileName");
+const btnGenerar = document.getElementById("btnGenerar");
 
 let archivos = [];
 
@@ -79,21 +80,25 @@ const temas = {
   defecto: {
     header: "bg-blue-600",
     drop: "text-blue-500 hover:bg-gradient-to-br hover:from-blue-100 hover:to-blue-200 hover:border-blue-400",
+    btn: "bg-blue-600 hover:bg-blue-700",
     texto: "Selecciona curso y dificultad"
   },
   facil: {
     header: "bg-green-600",
     drop: "text-green-600 hover:bg-gradient-to-br hover:from-green-100 hover:to-green-200 hover:border-green-400",
+    btn: "bg-green-600 hover:bg-green-700",
     texto: "Nivel fácil"
   },
   medio: {
     header: "bg-yellow-500",
     drop: "text-yellow-600 hover:bg-gradient-to-br hover:from-yellow-100 hover:to-yellow-200 hover:border-yellow-400",
+    btn: "bg-yellow-500 hover:bg-yellow-600",
     texto: "Nivel medio"
   },
   dificil: {
     header: "bg-red-600",
     drop: "text-red-600 hover:bg-gradient-to-br hover:from-red-100 hover:to-red-200 hover:border-red-400",
+    btn: "bg-red-600 hover:bg-red-700",
     texto: "Nivel difícil"
   }
 };
@@ -112,6 +117,8 @@ function cambiarNivel() {
     bg-white transition-all duration-500 shadow-sm
     ${tema.drop}
   `;
+
+  btnGenerar.className = `text-white font-bold py-4 px-10 rounded-xl text-xl shadow-lg transition-colors duration-300 ${tema.btn}`;
 }
 
 // Abrir selector de archivos al tocar dropZone
