--- a/ficha_defecto.html
+++ b/ficha_defecto.html
@@ -111,7 +111,7 @@ canvas {
 </div>
 
 <footer class="p-3 text-center text-xs text-gray-400 bg-gray-100 flex-none">
-    DLP Academy Tool
+    © 2025 DLP Academy Tool
 </footer>
 
 <script>
@@ -225,3 +225,4 @@ function mensaje(txt, ok = true) {
 
 </body>
 </html>
+
