--- a/ficha.html
+++ b/ficha.html
@@ -188,6 +188,9 @@ function enviarAN8N() {
   });
 }
 </script>
-
+<footer class="p-3 text-center text-xs text-gray-400 bg-gray-100 flex-none">
+    © 2025 DLP Academy Tool
+</footer>
 </body>
 </html>
+
