--- a/SOLUCIONARIO.html
+++ b/SOLUCIONARIO.html
@@ -141,6 +141,9 @@ function descargar(blob, nombre){
   URL.revokeObjectURL(url);
 }
 </script>
-
+<footer class="p-3 text-center text-xs text-gray-400 bg-gray-100 flex-none">
+    © 2025 DLP Academy Tool
+</footer>
 </body>
 </html>
+
